--- a/margin-and-padding/margin-and-padding-2/index.html
+++ b/margin-and-padding/margin-and-padding-2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,34 @@
   <title>Margin and Padding exercise 2</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="card">
-    <h1 class="title">I'm a card</h1>
-    <div class="content">I have content inside me..lorem ipsum blah blah blah. Here's some stuff you need to read.</div>
-    <div class="button-container">and a <button>BIG BUTTON</button></div>
+  <div>
+    <div class="control">
+      <div class="panel location">
+        <div class="rack">
+          <!-- <div class="rack-id"></div> -->
+          <div class="closet">Closet</div>
+          <div class="room">Room#</div>
+          <div class="cabinet">Cabinet</div>
+          <div class="panel-num">Panel#</div>
+          <div class="panel-cat"> Category</div>
+        </div>
+      </div>
+
+      <div class="panel content">
+        <div class="panel-body">
+          <div class="panel-port">Port</div>
+          <div class="drop-num">Drop</div>
+          <div class="belongs-to">Owner</div>
+          <div class="patched">Patched</div>
+          <div class="vlan">VLAN</div>
+        </div>
+      </div>
+
+    </div>
   </div>
+
 </body>
+
 </html>
